$Id$

2007-11-17 Edwin Velds <e.velds@gmail.com>
	* Added menu item for emulator reboot.
	* Made address labels visible in disassembled code.

2007-05-18 Edwin Velds <e.velds@gmail.com>
	* Fixed saving and restoring of window size and position.

2007-05-17 Edwin Velds <e.velds@gmail.com>
	* Improved scrollbar handling in disasm view.
	* Fixed scrollbar stepping in stack view.

2007-05-15 Edwin Velds <e.velds@gmail.com>
	* Fixed a bug that caused the disasm view to stop responding.

2007-03-08 Edwin Velds <e.velds@gmail.com>
	* Fixed communication bug in stack viewer.
	* Fixed layout bug that caused overlaps.

2007-03-07 Edwin Velds <e.velds@gmail.com>
	* Fixed dock widget insert bug that lead to crashes on exit.

2007-03-06 Edwin Velds <e.velds@gmail.com>
	* Changed resize handling of dock layout.

2007-02-23 Edwin Velds <e.velds@gmail.com>
	* Additional 64-bit fix in SymbolManager.

2007-02-22 Edwin Velds <e.velds@gmail.com>
	* changed 64-bit compilation error to one that does not warn
	  on 32-bit systems.

2007-02-15 Edwin Velds <e.velds@gmail.com>
	* Added a generic debuggable viewer.
	* Reworked some of the dock widget code to support multiple
	  viewers.

2007-02-11 Edwin Velds <e.velds@gmail.com>
	* Made the HexViewer code usable to view any debuggable.

2007-02-06 Edwin Velds <e.velds@gmail.com>
	* Removed launch button in connect dialog.
	* Added signals to react to settings and symbol changes.
	* Minor change in scrollbar handling of disasm view.

2007-02-05 Edwin Velds <e.velds@gmail.com>
	* Revised the disasm viewer navigation and display code.
	* Fixed some label handling issues.
	* Changed interrupt flag display in register view to DI/EI.

2007-01-14 Edwin Velds <e.velds@gmail.com>
	* Added a menu for hiding/showing controls.
	* Added storing and restoring of window layout in the settings.

2007-01-13 Edwin Velds <e.velds@gmail.com>
	* New docking layout manager.
	    Supports:
	    - Dragging controls off the main window to a separate window.